fixade text align och la till bild

--- a/doglopedia2.css
+++ b/doglopedia2.css
@@ -40,14 +40,18 @@ div h2 {
 
 #image {
     background-image: url("husky2.jpg");
-    background-size: cover;
-    max-height: 300px;
-    max-width: 300px;
+    height: 300px;
+    width: 300px;
+    overflow: hidden;
+    margin: 0 auto;
+    border-radius: 50%;
+    border: 1px solid black;
+    background-position: cover;
+    background-repeat: no-repeat;
+    max-width: 50%;
 }
 
-main {
-    text-align: center;
-}
+main {}
 
 main h3 {
     font-weight: bold;
